# anki-decks_danish-ipa

./: .bumpversion.cfg  Danish IPA.csv  README.md  build-deck.sh  description.html  pyproject.toml  update-dump.sh
deck/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  38  39  4  41  42  43  44  45  46  (+36 more)
recipes/: anki_to_source.yaml  source_to_anki.yaml
src/data/: .~lock.IPA consonant.csv#  IPA consonant-0d600.csv  IPA consonant.csv  IPA vowel-05510.csv  IPA vowel.csv
src/headers/: header1.yaml
src/note_models/IPA consonant/: IPA consonant.yaml  style.css
src/note_models/IPA consonant-0d600/: Forward.html  IPA consonant-0d600.yaml  Reverse.html  style.css
src/note_models/IPA vowel/: IPA vowel.yaml  Reverse.html
src/note_models/IPA vowel-05510/: Forward.html  IPA vowel-05510.yaml  style.css
